@@ -91,6 +91,7 @@ Included
 - Invalid disable-policy tokens fail closed with `ADAPTER_POLICY_INVALID`.
 - Adapter maintenance/policy fail-closed paths now still write deterministic safe-run evidence artifacts (`safe_run_receipt.json`, `operator_receipt.json`, and analysis receipts) before returning precondition exit code.
 - `container scan` fail-closed preconditions now also write deterministic evidence artifacts (`safe_run_receipt.json` and `operator_receipt.json`) before returning exit 40.
+- `container scan` now also writes `analysis/capability_ledger_v0.json` in both success and fail-closed paths so requested/granted/denied container capability decisions are always preserved as evidence.
 - `container scan` now honors adapter maintenance policy (`WEFTEND_ADAPTER_DISABLE` / `WEFTEND_ADAPTER_DISABLE_FILE`) for `container` lane control.
 - Additive receipt/summary surface:
 - `safe_run_receipt.json` optional `adapter` metadata block
